--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body {
   color: var(--dark-gray);
 }
 
-/* Header Fixo */
+/* Header Fixo novo */
 header {
   background-color: var(--dark-gray);
   position: fixed;
